# advent-of-code

./: .gitignore
2020/: README.md
2020/cpp/: CMakeLists.txt
2020/cpp/src/: main.cpp  tools.hpp
2020/python/: day1.py  day10.py  day11.py  day13.py  day15.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py  tools.py
2020/python/input/: day13_example.txt
2020/rust/: Cargo.toml
2021/: README.md
2021/python/: day1.py  day2.py  day3.py
